--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/wholesale_system?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
 
+server.servlet.context-path=/
+
+server.port=8080
+
+#mybatis type
+mybatis.type-aliases-package=com.neuedu.project.domain
+#mybatis userMapper.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#Single file max size
+spring.servlet.multipart.max-file-size=10MB
+#All file max size
+spring.servlet.multipart.max-request-size=2048MB
