--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wholesale_system?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/data?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=zhr2991713
 
 server.servlet.context-path=/
 
 server.port=8080
 
 #mybatis type
-mybatis.type-aliases-package=com.neuedu.project.domain
+mybatis.type-aliases-package=com.example.project.domain
 #mybatis userMapper.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 
