--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/data?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/wholesale_system?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=zhr2991713
+spring.datasource.password=123456
 
 server.servlet.context-path=/
 
