--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/new_schema?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/res?characterEncoding=UTF-8&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 
